--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </h1>
         <p id="p">
             My name is Ibrahim Mohamed El Desouki.<br>
-            I am 20 years old.<br>
+            I am 19 years old.<br>
             Student at the Faculty of Computers and Information, Damietta University.<br>
             Interested in the field of Front End.<br>
             My favorite hobby is photography and playing football
@@ -57,6 +57,11 @@
             <span class="fa-stack fa-lg">
             <i class="fas fa-circle  fa-stack-2x"></i>
             <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
+          </span></a>
+          <a href="https://www.linkedin.com/in/ebrahem-eldsoky-63a64a1b0">
+            <span class="fa-stack fa-lg">
+            <i class="fas fa-circle  fa-stack-2x"></i>
+            <i class="fab fa-linkedln fa-stack-1x fa-inverse"></i>
           </span></a>
         </div>
     </footer>
