--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           <a href="https://www.linkedin.com/in/ebrahem-eldsoky-63a64a1b0">
             <span class="fa-stack fa-lg">
             <i class="fas fa-circle  fa-stack-2x"></i>
-            <i class="fab fa-linkedln fa-stack-1x fa-inverse"></i>
+            <i class="fab fa-linkedin fa-stack-1x fa-inverse"></i>
           </span></a>
         </div>
     </footer>
