--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <title>portfolio</title>
 </head>
-<body style="background-color: gold;">
+<body style="background-image: url(f95aace4-f788-45ab-825c-79e755cd7e18.jpg);">
 <div id="page__wrapper">
     <header id="head">
         <h1 id="h1">My Portfolio</h1>
