--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <title>portfolio</title>
 </head>
-<body>
+<body style="background-color: gold;">
 <div id="page__wrapper">
     <header id="head">
         <h1 id="h1">My Portfolio</h1>
